err/unicum.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unicum'...
Compiling './lib/python3.5/site-packages/unicum/datarange.py'...
***   File "./lib/python3.5/site-packages/unicum/datarange.py", line 77
    raise ValueError, 'All column header entries must be unique.'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/unicum/factoryobject.py'...
***   File "./lib/python3.5/site-packages/unicum/factoryobject.py", line 108
    raise TypeError, 'Required object type of ObjectList items must be subtype of %s ' % FactoryObject.__name__
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/unicum/persistentobject.py'...
***   File "./lib/python3.5/site-packages/unicum/persistentobject.py", line 106
    raise TypeError, 'Requested object type %s must be subtype of %s ' % t
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/unicum/xl'...
Listing './lib/python3.5/site-packages/unicum-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
